# uniglicko

./: .gitignore  Cargo.toml  LICENSE  test.txt
.githooks/: pre-commit
src/: cli.rs  data.rs  db.rs  main.rs
