[package]
name = "uniglicko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
plotters = "0.3.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
skillratings = "0.26.0"
